--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<mat-chip-list>
-  <mat-chip *ngFor="let category of categories" (click)="selectCategory(category)" [selected]="category.selected">
-    {{ category.name }}
-  </mat-chip>
-</mat-chip-list>
+<mat-progress-spinner mode="indeterminate">
+</mat-progress-spinner>
