passing data on a material dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<mat-progress-spinner mode="indeterminate">
-</mat-progress-spinner>
+<button (click)="openDialog()" mat-raised-button>Open Dialog</button>
