creating custom theme & custom typography based on angular-material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<button (click)="openDialog()" mat-raised-button>Open Dialog</button>
+<h1>Heading 1</h1>
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, laudantium voluptates? Sunt libero ipsam aliquid
+    quidem rerum minus, neque dolore cupiditate totam molestiae tempora iste odit inventore qui debitis. Repudiandae!
+    Quia voluptas aspernatur aliquam, dolores eaque, dignissimos quaerat, dolore consequuntur esse consectetur sunt
+    corrupti minima delectus quidem in. Fugit explicabo at consectetur nam optio animi illo officia, sed necessitatibus
+    odit?
+    Fugiat mollitia aut, delectus sint voluptatibus culpa consequuntur consectetur? Eveniet rem dolor et iusto
+    asperiores quidem dolorem inventore id sapiente voluptatibus similique, omnis dicta sit optio? Nisi cum distinctio
+    facere!
+    Voluptate nam ullam magnam modi molestias tenetur hic nostrum facere corrupti, quo commodi dicta numquam. Pariatur
+    maxime accusamus odio neque eum nemo numquam impedit quia necessitatibus nisi! Repellendus, eos eaque?
+    Similique, voluptate voluptatibus? A similique, quasi nam non cum quisquam! Est excepturi, aut dolorem sapiente
+    facere repudiandae harum aliquid quibusdam placeat nulla provident nemo eius! Labore saepe similique ex expedita?
+</p>
